fix console errors on mobile

--- a/phalcon/css/core-custom.css
+++ b/phalcon/css/core-custom.css
@@ -5,3 +5,8 @@
 .slick-loading .slick-list {
   background: none;
 }
+
+.features-slider__nav-item:before,
+.features-slider__nav-item:after {
+  content: '';
+}
